# dns_cache

./: CMakeLists.txt
dns_cache/: dns_cache.cpp  dns_cache.h  global_dns_cache.h
modules/: CMakeLists.txt
modules/dns_cache/: CMakeLists.txt  dns_cache.cpp
tests/: CMakeLists.txt  dns_cache.cpp
utils/: CMakeLists.txt  spinlock.h
